third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/transparent-struct-many.stderr
error: #[error(transparent)] requires exactly one field
 --> tests/ui/transparent-struct-many.rs:4:1
  |
4 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
